Added functionality for HOlding and Model
