# backend/src/main/java/com/neueda/leap/dto/UpdateModelPortfolioHoldingRequestDto.java
@@ -1,0 +1,9 @@
+package com.neueda.leap.dto;
+
+import java.math.BigDecimal;
+
+public record UpdateModelPortfolioHoldingRequestDto(
+        BigDecimal targetWeightPct
+) {
+}
+
