# backend/src/main/java/com/neueda/leap/exception/ModelPortfolioNotFoundException.java
@@ -1,0 +1,8 @@
+package com.neueda.leap.exception;
+
+public class ModelPortfolioNotFoundException extends RuntimeException {
+    public ModelPortfolioNotFoundException(Integer modelPortfolioId) {
+        super("Model portfolio with id " + modelPortfolioId + " was not found.");
+    }
+}
+
